--- a/public_html/index.html
+++ b/public_html/index.html
@@ -15,6 +15,8 @@
     <script src="js/libs/misc/uuid.js"></script>
     <script src="js/libs/misc/sha256.js"></script>
     <script src="js/libs/misc/md5.js"></script>
+    <!-- https://github.com/satazor/SparkMD5/blob/master/spark-md5.js -->
+    <script src="js/libs/misc/spark-md5.js"></script>
     <!-- Zeta.Utils -->
     <script src="zeta/utils/misc.js"></script>
     <script src="zeta/utils/namespace.js"></script>
@@ -174,6 +176,24 @@
 
     </div> <!-- /website-content -->
     <script>
+      if (!Array.prototype.map) {
+        Array.prototype.map = function(f) {
+          var result = [];
+          for (var i = 0; i < this.length; ++i) {
+            result[i] = f(this[i], i);
+          }
+          return result;
+        };
+      }
+
+      String.prototype.b16decode = function() {
+        return this.match(/../g).map(
+                function(x) {
+                  return String.fromCharCode(parseInt(x, 16));
+                }
+        ).join('');
+      };
+
       $(window).load(function() {
         /* Drag'n'Drop */
         var holder = document.getElementById('holder');
@@ -212,14 +232,19 @@
               var binaryString = Zeta.Utils.Misc.get_binary_string_from_array_buffer(data);
               var hash = Zeta.Utils.Misc.encode_base64_md5(binaryString);
               var fileAsBlob = new Blob([new Uint8Array(data)], {type: contentType});
-              console.log(fileAsBlob);
+              var test = new Uint8Array(data);
+              hash = SparkMD5.ArrayBuffer.hash(data);
+              var md5 = window.btoa(hash);
+              console.log(md5);
+              md5 = Zeta.Utils.Misc.encode_base64_md5_array_buffer(data);
+
 
               var image = new Image();
               image.src = dataURL;
               image.onload = function() {
                 // Setup payload
                 var values = {
-                  binary: binaryString,
+                  binary: test,
                   cid: Zeta.Storage.Session.current_conversation_id,
                   contentType: contentType,
                   hash: hash,
@@ -230,7 +255,36 @@
                 var callback = function(data, textStatus, jqXHR) {
                   console.log(JSON.stringify(data));
                 };
-                Zeta.Service.AssetService.upload_asset(values, callback);
+//                Zeta.Service.AssetService.upload_asset(values, callback);
+
+
+                var url = Zeta.Service.URLs.create_access_token_url("/assets");
+                var unsigned_array = new Uint8Array(data);
+                md5 = SparkMD5.ArrayBuffer.hash(unsigned_array.buffer);
+                var b64 = window.btoa(md5.b16decode());
+                console.log("MD5 RAW " + SparkMD5.ArrayBuffer.hash(unsigned_array.buffer, true));
+                console.log("MD5 " + md5);
+                console.log("HASH " + b64);
+
+                var contentDisposition = "zasset;conv_id=" + Zeta.Storage.Session.current_conversation_id + ";md5=" + b64;
+
+                var ajaxRequest = new XMLHttpRequest();
+                ajaxRequest.open('POST', url, true);
+                ajaxRequest.setRequestHeader('Content-Type', contentType);
+                ajaxRequest.setRequestHeader('Content-Disposition', contentDisposition);
+
+                ajaxRequest.onreadystatechange = function() {
+                  if (ajaxRequest.readyState === 4) {
+                    console.log('Response: \n' + ajaxRequest.responseText);
+                  }
+                };
+
+
+                //  ajaxRequest.send(data); sends payload
+                // ajaxRequest.send(unsigned_array); doesnt send a payload
+                ajaxRequest.send(unsigned_array);
+
+
               };
             };
             dataURLReader.readAsDataURL(file);
